# SpireSight

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  mypy_output.txt  pyproject.toml  pytest_output.txt  ruff_output.txt
.github/workflows/: ci.yml  release.yml
config/: prices.yaml
data/sts2_cards/: cards.json  cards.sqlite  metadata.json
docs/: bugfix-status-bar-provider-switch.md  status-bar-fix-demo.md
docs/superpowers/plans/: 2026-05-15-spiresight-mvp.md  2026-05-16-cicd-release.md  2026-05-16-multi-frame-capture.md  2026-05-16-run-state-memory.md  2026-05-17-mini-bar-bubble-plan.md  2026-05-17-tabbed-ui-refactor.md  2026-05-17-token-cost-debug.md  2026-05-18-logs-request-context-and-timeout.md  2026-05-18-providers-and-openai-compat-relays.md  2026-05-19-minimode-ui-expand.md  2026-05-24-sts2-card-fetcher-fix.md
docs/superpowers/specs/: 2026-05-15-spiresight-mvp-design.md  2026-05-16-cicd-release-design.md  2026-05-16-multi-frame-capture-design.md  2026-05-16-prompt-run-state-design.md  2026-05-16-ui-i18n-and-icons-design.md  (+8 more)
packaging/: build.bat  build.sh  spiresight.spec
packaging/icons/: README.md  build_icons.py  icon.icns  strip_checkerboard.py
prompts/: freeform.txt  guard.txt  system_prompts.yaml
scripts/: pixel_diag_chat_history.py  pixel_diag_reasoning.py  pixel_diag_spiresight_shape.py  pixel_provider_diag.py  probe_openai_relay.py  relay_image_demo.py  relay_minimal_demo.py
src/spiresight/: __main__.py  app.py  logging_setup.py
tests/: conftest.py  test_anthropic_provider.py  test_bubble_toggle_button.py  test_capabilities.py  test_capability_table.py  test_card_knowledge_store.py  test_compose_dock.py  test_config_paths.py  test_config_store.py  test_conversation_clear_sync.py  test_conversation_transcript.py  test_default_prompts.py  test_fetch_sts2_cards.py  test_follow_up_ui.py  test_gemini_provider.py  test_history_store.py  test_history_tab.py  test_hotkey_manager.py  test_inference_runner.py  test_inference_worker_logging.py  test_inference_worker_usage_flow.py  test_info_bubble_resize.py  test_inspect_buttons_controller.py  test_inspect_panel.py  test_inspect_session.py  test_inspect_worker_logging.py  test_knowledge_gateway.py  test_log_row.py  test_logging_setup.py  test_logs_tab.py  test_logs_tab_request.py  test_main_window_minimode_expand.py  test_markdown_renderer.py  test_message_composer.py  test_mini_bar_layout.py  test_mini_inspect_controls.py  test_model_info_bridge.py  test_model_refresh_worker.py  test_openai_compat_provider.py  test_openai_provider.py  (+28 more)
tests/core/: test_conversation.py  test_messages.py  test_request.py
tools/: __init__.py  fetch_sts2_cards.py
(+79 files in other folders)
