[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spiresight"
version = "0.0.0+dev"
description = "AI visual assistant for Slay the Spire II"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.6",
  "mss>=9.0",
  "pynput>=1.7",
  "httpx>=0.27",
  "markdown-it-py>=3.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "PyYAML>=6.0",
  "Pillow>=10.0",
  "Pygments>=2.17",
]
# NOTE: Spec §3 names the `openai` SDK as the MVP LLM library. The
# implementation in src/spiresight/llm/providers/openai_provider.py
# instead talks to the OpenAI API via httpx directly. This gives us
# fine-grained cancellation between SSE chunks (the SDK's streaming
# iterator isn't friendly to mid-stream aborts from another thread).
# The external behavior — endpoint, payload, error mapping — matches
# what the SDK would produce. Swap-in is a one-file change if priorities
# shift.

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.20",
  "httpx>=0.27",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
  "types-pynput>=1.7",
]

[project.scripts]
spiresight = "spiresight.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spiresight = ["resources/qss/*.qss", "resources/icons/*.svg", "resources/backgrounds/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
